--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 ; Configurable parameters:
-; SERIALCOM_SPEED = speed of the serial port (baud), performance/debug data only, global [env] section
+; SERIALCOM_SPEED = speed of the serial port (baud), performance/debug data only, global [env] section.
 ; DATA_PIN = pin/GPIO for the LED strip data channel, specific [board] section
 ;
 ; MULTI-SEGMENT SUPPORT
